--- a/FrontEnd/extension/manifest.json
+++ b/FrontEnd/extension/manifest.json
@@ -3,16 +3,5 @@
     "version": "1.0",
     "description": "Find the relevant case parts.",
     "manifest_version": 2,
-    "background": {
-        "scripts": [
-            "js/es6-promise.auto.min.js",
-            "js/defaults.js",
-            "js/speech.js",
-            "js/document.js",
-            "js/events.js",
-            "js/stt.js",
-            "js/listen.js"
-        ],
-        "persistent": false
-    }
+    "options_page": "options.html"
 }
