--- a/FrontEnd/extension/manifest.json
+++ b/FrontEnd/extension/manifest.json
@@ -7,6 +7,7 @@
   "content_scripts": [{
     "js": [
       "jquery-3.3.1.min.js",
+      "ScrollMagic.js",
       "content.js"
     ],
     "css": ["styles.css"],
