--- a/FrontEnd/extension/manifest.json
+++ b/FrontEnd/extension/manifest.json
@@ -9,6 +9,8 @@
       "jquery-3.3.1.min.js",
       "ScrollMagic.js",
       "CourtURL_To_Jurisdiction_Mapping.js",
+      "Search/fuse.js",
+      "Search/main.js",
       "content.js"
     ],
     "css": ["styles.css"],
